# LunaticAI-Driver-for-CARLA-Simulator

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  AgentGameLoop.py  Camera.py  CarlaFunctions.py  CarlaService.py  Driver.py  GameLoop.py  GameLoopAgent.py  GameLoopTM.py  LICENSE  Lane_obj_det.py  OldGameLoop.py  README.md  TODOS.md  Vehicle.py  agent_main.py  carla_service.py  drive_car.py  driver.py  example_runner.py  game_loop_config.py  gather_information.py  informationUtils.py  lunatic_agent.py  lunatic_driver.py  main.py  matrix_wrap.py  mkdocs.yml  pyproject.toml  ruleset.py  run_leaderboard_agent.sh  scenario 1.py  scenario2.py  temp.py  trafic_manager_daniel.py  vehicle.py
DataGathering/: gather_information.py  informationUtils.py  informationUtilsV2.py  matrix_wrap.py  run_matrix.py
Rules/: ApplyRules.py  HardcodedRules.py
Rules/config/: defaultRules.json  defaultRules.yaml
Screencasts/: Screencast from 2023-10-10 08-18-35.webm
Vehicle/: vehicle.py  vehicleWrapper.py
VehicleSpawning/: CarlaFunctions.py  vehicle_spawner.py
VehicleSpawning/config/: vehicle_spawn.yaml
_recorder/: video_from_session.sh
agents/: Agents.md  Rules.md  __init__.py  behaviour_templates.py  dynamic_local_planner.py  leaderboard_agent.py  lunatic_agent.py  lunatic_agent.py.rej  our_agent.py
agents/dynamic_planning/: dynamic_controller.py  dynamic_local_planner.py
agents/navigation/: basic_agent.py  behavior_agent.py  behavior_default.py  behavior_types.py  constant_velocity_agent.py  controller.py  custom_agents.py  custom_behavior_agents.py  global_route_planner.py  local_planner.py
agents/rules/: BlockingRule.py  Rules.md  __init__.py  _debug_rules.py  avoid_tailgating.py  behaviour_templates.py  rule_interface.md  stopped_long_trigger.py
agents/substep_managers/: __init__.py  car_following.py  collision.py  collision_and_car_avoidance.py  collision_callback.py  emergency.py  obstacle_detection.py  pedestrian_avoidance.py  pedestrian_detection.py  traffic_light.py
agents/tools/: __init__.py  _config_tools.py  config_creation.py  config_creation.py.rej  debug_drawing.py  hints.py  lane_explorer.py  logging.py  logs.py  lunatic_agent_tools.py  misc.py
classes/: Classes.md  HUD.py  __init__.py  _custom_sensor.py  _sensor_interface.py  _type_protocols.py  camera_manager.py  carla_service.py  constants.py  detection_matrix.py  driver.py  evaluation_function.py  exceptions.py  hud.py  information_manager.py  keyboard_controls.py  rss_sensor.py  rss_visualization.py  rule.py  rule_interpreter.py  sensors.py  traffic_manager.py  traffic_manager_daniel.py  type_protocols.py  vehicle.py  vehicle_spawner.py  world.py  worldmodel.py
classes/carla_originals/: HUD.py  __init__.py  camera_manager.py  rss_sensor.py  rss_visualization.py  sensors.py  world.py  world_interactive.py
classes/experimental/: driver.py  rule_interpreter.py  traffic_manager.py  vehicle.py  vehicle_spawner.py
classes/managers/: car_following.py  collision.py  collision_and_car_avoidance.py  emergency.py  pedestrian_avoidance.py  traffic_light.py
classes/sensors/: __init__.py  _sensor_interface.py  rss_sensor.py  rss_visualization.py
classes/substep_managers/: emergency.py
classes/ui/: __init__.py  camera_manager.py  hud.py
conf/: ConfigFiles.md  README_default_settings.yaml  __init__.py  agent_default_settings.yaml  agent_settings.py  agent_settings_full_example.md  config_creation copy.py  launch_config.yaml  launch_config_default.md  launch_config_default.yaml  lunatic_agent_settings.yaml  lunatic_behavior_settings.py  lunatic_behavior_settings.yaml  settings_base_class.py
conf/agent/: default_settings.yaml  interpolation.yaml  leaderboard.yaml  live_info.yaml
conf/config_extensions/: camera.yaml  camera_default.yaml  interpolation.yaml  job_logging.yaml  job_logging_colors.yaml  leaderboard_agent_settings.yaml  live_info.yaml  planner.yaml
conf/default_options/: basic_agent_settings.yaml  behavior_agent_settings.yaml  (+3 more)
config/: README_default_settings.yaml  aggressive_driver.json  default_driver.json  insane_driver.json  lunatic_behavior_settings.py  lunatic_behavior_settings.yaml  original_behavior.py  original_default_settings.yaml  settings_base_class.py
data_gathering/: information_manager.py  processor.py
doc/: AgentLifecycleDiagram.drawio.html  Near Player start.txt  highway_example_car_positions.csv  readme.md  spawn_points.txt
docs/: .readthedocs.yaml  Agents.md  Classes.md  Install.md  Quickstart-Documentation.html  Quickstart.md  Rules.md  conf.py  index.rst  index_mkdocs.md  requirements_uncleaned.txt  spawn_points.txt
examples/: OldGameLoop.py  __allow_imports_from_root.py  _fix_imports.py  automatic_control-carla-original.py  automatic_control-ours.py  automatic_control.py  camera_adapt.py  data_matrix_example.py  data_matrix_example_with_rules.py  drive_car.py  example_runner.py  examples README.md  examples.md  first_agent_example.py  first_main_example.py  gather_information.py  highway_example.py  interactive_playground_daniel.py  make_cars_drive.py  minimal.py  minimal_leaderboard.py  test.py  test_all_classes.py  traffic_manager_with_autopilot.py
json/: driver1.json
launch_tools/: __init__.py  _egg_import.py  _import_carla_data_provider.py  _version_handling.py  argument_parsing.py  blueprint_helpers.py  carla_service.py  csv_tools.py  egg_import.py  general.py  part_merge_leaderboard_agent.sh
mypyout/: map.pyi  world.pyi
playground/: interactive_playground_daniel.py
rules/: readme.md
to_be_trashed/: EvalFunction.py  lunatic_behavior_settings.py  settings_base_class.py
useful_scripts/: change_map.py  highway_example.py  highway_example_car_positions.csv  make_cars_drive.py  tutorial3.py  utils.py
usefull_scripts/: change_map.py  highway_example.py  tutorial2.py  utils.py
utils/: Camera.py  EvalFunction.py  __allow_imports_from_root.py  __init__.py  argument_parsing.py  blueprint_helpers.py  camera_manager.py  change_map.py  distance_tools.py  egg_import.py  evaluation_function.py  general.py  keyboard_controls.py  logging.py
(+172 files in other folders)
