[project]
name = ""
requires-python = ">=3.8"

[tool.ruff]
extend-exclude = ["typings/carla/ad/*",
                  "scenario_runner/", 
                  "docs/*",
                  "data_gathering/car_detection_matrix/informationUtilsV2.py",
                  "mypyout/*"]

# Allow lines to be as long as 120.
line-length = 120

#max-doc-length = 88

[tool.ruff.lint]
typing-modules = ["launch_tools"]

# See: https://docs.astral.sh/ruff/rules/#pydocstyle-d

select = [
    "A",
    "B",
    "C4",
    "E",
    "F",
    "I",
    "ISC001",
    "PGH004",
    "RUF",
    "SIM201",
    "SIM202",
    "UP",
    "W",
    "YTT",
    "PLE1205",
    "PERF",
    "G004",
    "PIE808", # unnecessary-range-start
]

ignore = [
"UP037", # needs __future__.annotations
"I001",
"UP007",
"W293",
"E501",
"UP036",
"UP006",
"PGH004",
"UP006",
"UP013",
"UP014",
"UP019",
"UP035",
"UP038",
"UP015",
#"W605",
"RUF100",

# deprecated:
"ANN101", "ANN102",
]

[tool.ruff.lint.per-file-ignores]
"typings/*" = [
    "B008",
    "B006",
    "F405",
    "PIE790",
    "PYI011",
    "PYI014", # Non-simple type, should use ... instead.
    "PYI021", # Docstrings should not be included in stubs; but no docstrings from C
]

"agents/rules/*" = [
    "RUF012",
    "ANN201",
]
"agents/tools/config_creation.py" = [
    "SIM118", # OmegaConf in dict and in dict.keys() is different
]
"agents/tools/_config_tools.py" = [
    "SIM118", # OmegaConf in dict and in dict.keys() is different
]
"classes/hud.py" = [
    "UP032", # Format instead of percent
]
"classes/experimental/**" = [
    "A",
]
"typings/carla/*" = [
    "A002"
]

# Keep original examples simple; allow {} in def
"agents/navigation/controller.py" = ["ANN"]
"agents/tools/misc.py" = ["ANN"]
"agents/tools/debug_drawing.py" = ["ANN"]
"agents/navigation/basic_agent.py" = ["B006", "ANN"]
"agents/navigation/behavior_agent.py" = ["B006", "ANN"]
"agents/navigation/constant_velocity_agent.py" = ["B006", "UP008", "ANN"]


[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.flake8-annotations]
# Whether to suppress ANN401 for dynamically typed *args and **kwargs arguments.
#allow-star-arg-any = true

# Whether to suppress ANN* rules for any declaration that hasn't been typed at all.
#ignore-fully-untyped = true

suppress-dummy-args = true

[tool.ruff.lint.flake8-bugbear]
# prevent B008, RUF009
extend-immutable-calls = ["omegaconf.II", "omegaconf.SI"]

[tool.ruff.lint.flake8-self]
extend-ignore-names = ["_target_"]

[tool.ruff.lint.isort]
#single-line-exclusions = ["os", "json"]
#required-imports = ["from __future__ import annotations"]
